--- a/app/views/redmine_checkout_hooks/_view_repositories_show_contextual.html.erb
+++ b/app/views/redmine_checkout_hooks/_view_repositories_show_contextual.html.erb
@@ -24,7 +24,9 @@
     <%= javascript_tag do -%>
       var checkout_access   = {<%= protocols.inject([]){|r,p| r << "'checkout_protocol_#{p.protocol.to_s.underscore}': '#{l(p.access_label(User.current))}'"}.join(', ').html_safe %>};
       var checkout_commands = {<%= protocols.inject([]){|r,p| r << "'checkout_protocol_#{p.protocol.to_s.underscore}': '#{escape_javascript(p.full_command(checkout_path))}'"}.join(', ').html_safe %>};
-      <%- if Setting.checkout_use_zero_clipboard? %>ZeroClipboard.setMoviePath( '<%= Checkout::ViewHelper.plugin_asset_link('images/ZeroClipboard.swf', :plugin => 'redmine_checkout') %>' );<% end %>
+      <%- if Setting.checkout_use_zero_clipboard? %>
+        ZeroClipboard.config({ swfPath: '<%= Checkout::ViewHelper.plugin_asset_link('images/ZeroClipboard.swf', :plugin => 'redmine_checkout') %>' });
+        <% end %>
     <% end %>
   </div>
   <% end %>
