removed own box styling and re-used Redmine style

--- a/app/views/redmine_checkout_hooks/_view_repositories_show_contextual.html.erb
+++ b/app/views/redmine_checkout_hooks/_view_repositories_show_contextual.html.erb
@@ -1,4 +1,4 @@
-<div class="repository-info">
+<div id="repository-info" class="box issues">
   <% if repository.checkout_description.present? %>
   <div class="wiki<%= ' bottomline' if protocols.present? %>"><%= textilizable repository.checkout_description %></div>
   <% end %>
